--- a/live-chat-server/.env
+++ b/live-chat-server/.env
@@ -1,3 +1,3 @@
 PORT = 8080
-MONGO_URI = mongodb+srv://boneyfernandez:Yi2a9suTL.ciiJY@livechatappdb.9rbqduj.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://m001-student:m001-mongodb-basics@cluster0.0uf8m.mongodb.net/HackathonChats
 JWT_SECRET = prepbytes
